--- a/viz-web-view/src/d3/barChartWeeks.html
+++ b/viz-web-view/src/d3/barChartWeeks.html
@@ -51,6 +51,11 @@ svg.append('g')
   
  svg.append("g")
   .call(d3.axisLeft(y));
+  
+const yAxisGrid = d3.axisLeft(y).tickSize(-width).tickFormat('').ticks(20);
+svg.append('g')
+  .attr('class', 'y axis-grid')
+  .call(yAxisGrid);
 
 // Bars
 svg.selectAll(".bar")
